--- a/style.css
+++ b/style.css
@@ -43,3 +43,15 @@ h2{
 .boton button:hover{
     background-color: darkgrey;
 }
+
+.imagen img{
+    width:200px;
+    height:100px;
+    top:30%;
+    left:50%;
+    position:absolute;
+    margin-top:-50px;
+    margin-left:-100px;
+    text-align:center;
+    
+}
