--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ header {
     overflow-y: auto;
     padding: 20px;
     border-radius: 6px;
-   
-    
+
+
 }
 
 footer {
@@ -71,7 +71,7 @@ footer {
     margin: 10px 76%;
     height: 28px;
     margin-right: 10px !important;
- 
+
     background-color: #357ae8;
     border-radius: 6px;
     color: #fff;
@@ -87,91 +87,114 @@ footer {
 }
 
 
-table th:first-child{
-    border-radius:10px 0 0 0px;
-  }
-  
-  table th:last-child{
-    border-radius:0 10px 0px 0;
-  }
+table th:first-child {
+    border-radius: 10px 0 0 0px;
+}
 
-  table th, td {
+table th:last-child {
+    border-radius: 0 10px 0px 0;
+}
+
+table th,
+td {
     padding-left: 15px !important;
-  }
+}
 
 table th {
     background-color: rgb(74 75 78) !important;
     color: white;
 }
+
 .btn {
     outline: none;
     width: 35%;
-    
+
 }
-  
+
 btn:focus {
-  box-shadow: none !important;
-  border: none !important;
+    box-shadow: none !important;
+    border: none !important;
 }
 
 
 
-h2{
-    width:200px;
-    height:100px;
-    top:15%;
-    left:42%;
-    
-    margin-top:-50px;
-    margin-left:-100px;
-    text-align:center;
+h2 {
+    padding: 30px;
+    text-align: center;
 }
 
-.cronometro{
-    width:200px;
-    height:100px;
-    top:20%;
-    left:45%;
-    margin-top:-50px;
-    margin-left:-100px;
-    text-align:center;
-}
-.cronometro h1{
-    float:left;
-    border: 3px solid;
+.cronometro {
+
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.boton{
-    display:inline-block;width:50px;height:100px;
+.cronometro h1 {
+    display: flex; 
+    text-align: center;
+    border-radius: 6px;
+    max-width: 300px;
+    justify-content: center;
+    flex-direction: row;
+    margin-bottom: 20px;
+    background-color: #4a4b4e;
 
-    top: -15%;
 }
-.boton button{
-    background-color: darkblue;
+
+.boton {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-content: center;
+    gap: 3px;
+    justify-content: center;
+}
+
+.boton button {
     color: white;
-    width: 200px; 
-     
+    border-radius: 6px;
+    border: none;
+    width: 100%;
+    max-width: 200px;
+    min-width: 90px;
 }
 
-.boton button:hover{
-    background-color: darkgrey;
+
+
+#iniciar {
+    background-color: #0cc243;
 }
 
-.imagen img{
-    width:200px;
-    height:100px;
-    top:30%;
-    left:50%;
-   
-    margin-top:-50px;
-    margin-left:-100px;
-    text-align:center;
-    
+#parar {
+    background-color: #dc3545;
+}
+
+#reiniciar {
+    background-color: #fff;
+    border: 2px solid #357ae8;
+    color: #357ae8;
+}
+
+.boton button:hover {
+    background-color: darkgrey !important;
+
+}
+
+.imagen img {
+    margin-top: -20px;
+    width: 200px;
+    height: 133px;
+    margin-top: -50px;
+    text-align: center;
+
 }
 
 .crono {
     display: flex;
-    margin-top: 10%;
+    margin-top: 5%;
     flex-direction: column;
     align-content: center;
     justify-content: center;
