--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header {
     align-content: center;
     align-items: center;
     padding-top: 5%;
+    margin-bottom: 100px;
 }
 
 .weather-head {
